Bump upstreams
Adopt:
- odlparent-13.1.1
- yangtools-13.0.3
- mdsal-13.0.2

Change-Id: I6a57d7b612203bfea2291432cec4946f11abd078
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>